# test-python-project-setup

./: .pre-commit-config.yaml  README.md  pyproject.toml
.github/workflows/: ci.yml
fibonacci/: __about__.py  __init__.py  sequence.py
tests/: test_sequence.py
